Sat Sep 19 21:23:03 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_signal.inl:
          Fix typo.

Sat Sep 19 12:12:23 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_signal.h:
        * ace/OS_NS_signal.inl:
          Fix for platforms which implement sigsuspend as macro.

Fri Sep 18 18:36:16 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-win32-cegcc.h:
          Fix sigset related compile error with cegcc.

Thu Sep 17 14:17:10 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-win32-mingw.h:
        * ace/os_include/os_signal.h:
          Fix sigset related compile error on MinGW.

Thu Sep 17 12:23:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Process_Semaphore.h
        * ace/Thread_Semaphore.h
        * ace/Atomic_Op.h
        * ace/Condition_Recursive_Thread_Mutex.h
        * ace/Null_Mutex.h
          Doxygen fixes

Wed Sep 16 18:44:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/bmake.features:
        * bin/MakeProjectCreator/config/em3.features:
        * bin/MakeProjectCreator/config/global.features:
        * bin/MakeProjectCreator/config/gnuace.features:
        * bin/MakeProjectCreator/config/nmake.features:
        * bin/MakeProjectCreator/config/vc71.features:
        * bin/MakeProjectCreator/config/vc8.features:
        * bin/MakeProjectCreator/config/vc9.features:
          Removed cidl, that feature has been removed with 1.7.2

        * bin/MakeProjectCreator/config/vc10.features:
          New file for vc10

        * bin/MakeProjectCreator/config/gnuace.features:
          Set ndds=1 by default, at the end enabling ndds
          is then controlled through the platform_macros.GNU File

Wed Sep 16 10:54:39 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_signal.inl:
        * ace/config-win32-cegcc.h:
        * ace/config-win32-mingw.h:
          Removed use of ACE_LACKS_SIGSET_DEFINITIONS macro. It seems that