@@ -58,9 +58,6 @@
 
 #define ACE_HAS_SYSCTL
 
-//?
-#define ACE_LACKS_SIGSET
-
 #define ACE_NEEDS_SCHED_H
 
 // Use of <malloc.h> is deprecated.
